syntax = "proto3";

package auth_service;

option go_package = "auth_service/proto/auth_service";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string role = 3;
}

message RegisterResponse {
    bool success = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool success = 1;
    string user_id = 2;
    string role = 3;
}










